--- a/inkstand-http-undertow/pom.xml
+++ b/inkstand-http-undertow/pom.xml
@@ -13,9 +13,7 @@
 	<dependencies>
         <dependency>
             <groupId>li.moskito</groupId>
-            <artifactId>inkstand-test-util</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
-            <type>test-jar</type>
+            <artifactId>scribble</artifactId>
             <scope>test</scope>
         </dependency>
 		<dependency>
