--- a/inkstand-deployments/inkstand-deployment-resteasy/pom.xml
+++ b/inkstand-deployments/inkstand-deployment-resteasy/pom.xml
@@ -44,6 +44,11 @@
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-client</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.jboss.resteasy</groupId>
+		    <artifactId>resteasy-undertow</artifactId>
+		    <version>3.0.10.Final</version>
+		</dependency>
 
 		<!-- Deltaspike -->
 		<dependency>
