--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
 		<module>inkstand-http-undertow</module>
 		<module>inkstand-deployments</module>
 		<module>inkstand-ms</module>
+		<module>inkstand-security</module>
 	</modules>
 
 	<properties>
@@ -101,6 +102,8 @@
 		<apache.commons.io.version>2.4</apache.commons.io.version>
 		<apache.deltaspike.version>1.1.0</apache.deltaspike.version>
 		<apache.jackrabbit.version>2.8.0</apache.jackrabbit.version>
+		<apache.ds.server.version>2.0.0-M19</apache.ds.server.version>
+		<apache.ds.ldap.api.version>1.0.0-M27</apache.ds.ldap.api.version>
 		<!-- JBoss Library Version -->
 		<jboss.resteasy.version>3.0.10.Final</jboss.resteasy.version>
 		<jboss.weld.se.version>2.2.6.Final</jboss.weld.se.version>
@@ -286,6 +289,18 @@
 				<artifactId>deltaspike-core-impl</artifactId>
 				<version>${apache.deltaspike.version}</version>
 			</dependency>
+			<!-- Apache DS -->
+			<dependency>
+			    <groupId>org.apache.directory.api</groupId>
+			    <artifactId>api-all</artifactId>
+			    <version>${apache.ds.ldap.api.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.apache.directory.server</groupId>
+			    <artifactId>apacheds-all</artifactId>
+			    <version>${apache.ds.server.version}</version>
+			</dependency>
+						
 			<!-- JBoss Resteasy -->
 			<dependency>
 				<groupId>org.jboss.resteasy</groupId>
