INK-1 migrated to io.inkstand.scribble

--- a/inkstand-http-undertow/pom.xml
+++ b/inkstand-http-undertow/pom.xml
@@ -53,7 +53,7 @@
 		<!-- Apache DS -->
 		<dependency>
 			<groupId>org.apache.directory.api</groupId>
-			<artifactId>api-all</artifactId>
+			<artifactId>api-ldap-client-api</artifactId>
 		</dependency>
 	</dependencies>
 </project>
