INK-1 updated poms to point to scribble

--- a/inkstand-deployments/inkstand-deployment-resteasy/pom.xml
+++ b/inkstand-deployments/inkstand-deployment-resteasy/pom.xml
@@ -12,7 +12,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>li.moskito</groupId>
+            <groupId>io.inkstand</groupId>
 			<artifactId>scribble</artifactId>
 			<scope>test</scope>
 		</dependency>
