--- a/inkstand-jcr-jackrabbit/pom.xml
+++ b/inkstand-jcr-jackrabbit/pom.xml
@@ -72,7 +72,7 @@
 			<type>test-jar</type>
 		</dependency>
 		<dependency>
-			<groupId>li.moskito</groupId>
+            <groupId>io.inkstand</groupId>
 			<artifactId>scribble</artifactId>
 			<scope>test</scope>
 		</dependency>
