--- a/inkstand-http-undertow/pom.xml
+++ b/inkstand-http-undertow/pom.xml
@@ -13,7 +13,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>li.moskito</groupId>
+            <groupId>io.inkstand</groupId>
 			<artifactId>scribble</artifactId>
 			<scope>test</scope>
 		</dependency>
