--- a/inkstand-jcr/pom.xml
+++ b/inkstand-jcr/pom.xml
@@ -31,7 +31,7 @@
             <version>0.1.1-SNAPSHOT</version>
         </dependency>
 		<dependency>
-			<groupId>li.moskito</groupId>
+            <groupId>io.inkstand</groupId>
 			<artifactId>scribble</artifactId>
 			<scope>test</scope>
 		</dependency>
