--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
 		<test.junit.version>4.11</test.junit.version>
 		<test.mockito.version>1.9.5</test.mockito.version>
 		<test.htmlunit.version>2.8</test.htmlunit.version>
-		<test.scribble.version>0.0.5-SNAPSHOT</test.scribble.version>
+		<test.scribble.version>0.1.0</test.scribble.version>
 		<test.jsonassert.version>1.2.3</test.jsonassert.version>
 		<test.arquillian.version>1.1.5.Final</test.arquillian.version>
 		<test.arquillian.weld.version>1.0.0.CR8</test.arquillian.weld.version>
@@ -404,7 +404,7 @@
 			</dependency>
 			<!-- Test Dependencies -->
 			<dependency>
-				<groupId>li.moskito</groupId>
+				<groupId>io.inkstand</groupId>
 				<artifactId>scribble</artifactId>
 				<version>${test.scribble.version}</version>
 				<scope>test</scope>
