--- a/inkstand-security/pom.xml
+++ b/inkstand-security/pom.xml
@@ -1,19 +1,21 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>io.inkstand</groupId>
-    <artifactId>inkstand</artifactId>
-    <version>0.1.1-SNAPSHOT</version>
-  </parent>
-  
-  <artifactId>inkstand-security</artifactId>
-  <description>Security support.</description>
-  
-  <dependencies>
-    <dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
         <groupId>io.inkstand</groupId>
-        <artifactId>inkstand-core</artifactId>
+        <artifactId>inkstand</artifactId>
         <version>0.1.1-SNAPSHOT</version>
-    </dependency>  
-  </dependencies>
+    </parent>
+
+    <artifactId>inkstand-security</artifactId>
+    <name>${project.groupId}:${project.artifactId}</name>
+    <description>Security support.</description>
+
+    <dependencies>
+        <dependency>
+            <groupId>io.inkstand</groupId>
+            <artifactId>inkstand-core</artifactId>
+            <version>0.1.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
