--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
 		<jboss.undertow.version>1.2.0.Beta3</jboss.undertow.version>
 		<!-- Library Versions -->
 		<halite.version>0.0.15</halite.version>
+		<slf4j.version>1.7.6</slf4j.version>
+		<log4j.version>2.0-rc1</log4j.version>
+		<jacoco.version>0.7.2.201409121644</jacoco.version>
+		<junit.version>4.11</junit.version>
+		<mockito.version>1.9.5</mockito.version>
 
 	</properties>
 	<modules>
