--- a/inkstand-core/pom.xml
+++ b/inkstand-core/pom.xml
@@ -30,6 +30,10 @@
     </parent>
     <dependencies>
         <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.weld.se</groupId>
             <artifactId>weld-se</artifactId>
         </dependency>
