--- a/inkstand-deployments/pom.xml
+++ b/inkstand-deployments/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>io.inkstand</groupId>
     <artifactId>inkstand</artifactId>
-    <version>0.1.2-SNAPSHOT</version>
+    <version>0.1.2</version>
   </parent>
   <artifactId>inkstand-deployments</artifactId>
   <packaging>pom</packaging>
