--- a/inkstand-jcr/pom.xml
+++ b/inkstand-jcr/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>io.inkstand</groupId>
 		<artifactId>inkstand</artifactId>
-		<version>0.1.2-SNAPSHOT</version>
+		<version>0.1.2</version>
 	</parent>
 	<artifactId>inkstand-jcr</artifactId>
 	<name>${project.groupId}:${project.artifactId}</name>
@@ -28,7 +28,7 @@
 		<dependency>
             <groupId>io.inkstand</groupId>
             <artifactId>inkstand-core</artifactId>
-            <version>0.1.2-SNAPSHOT</version>
+            <version>0.1.2</version>
         </dependency>
 		<dependency>
             <groupId>io.inkstand</groupId>
